package src.strategy;

public interface DriveStrategy {

    void drive();
}
