
package src.strategy;

public class SportsVehicle extends Vehicle{
    SportsVehicle()
    {
        super(new SpecialDrive());
    }
}
